k8s/app/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-server
  namespace: sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-server
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: go-server
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
        - image: hamedsalim1999/go-samole:5690163479
          name: go-server
          imagePullPolicy: Always
          resources:
            limits:
              memory: 1G
            requests:
              memory: 1G
          ports:
            - containerPort: 8080
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - if [ $(curl -LI http://localhost:8080 -o /dev/null -w '%{http_code}\n' -s) == "200" ]; then exit -1; else echo "OK" ; fi
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - if [ $(curl -LI http://localhost:8080 -o /dev/null -w '%{http_code}\n' -s) == "200" ]; then exit -1; else echo "OK" ; fi
            timeoutSeconds: 5
            failureThreshold: 2
            periodSeconds: 20
