k8s/app/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-server-service
  namespace: sample
  labels:
    app: go-server
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: go-server
