k8s/app/server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-server-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: "api.go-sample.exchange"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: go-server-service
                port:
                  number: 8080
